--- a/frontend/src/components/main/Style.css
+++ b/frontend/src/components/main/Style.css
@@ -130,3 +130,28 @@
   color: #cf711f;
   font-weight: 700;
 }
+
+
+/* ///////////////////FEATURES/////////////////////// */
+.container py-2, a:hover {
+	text-decoration: none;
+	transition: color 0.3s ease-in-out;
+}
+#pageHeaderTitle {
+	margin: 2rem 0;
+	text-transform: uppercase;
+	text-align: center;
+	font-size: 2.5rem;
+}
+.postcard {
+    flex-wrap: wrap;
+    display: flex;
+    
+    box-shadow: 0 4px 21px -12px rgba(0, 0, 0, 0.66);
+    border-radius: 10px;
+    margin: 0 0 2rem 0;
+    overflow: hidden;
+    position: relative;
+    color: #141414;
+}
+
